[package]
name = "rust-route-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.5.1"
async-trait = "0.1.80"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
sqlx = { version = "0.7.4", features = ["tls-native-tls", "runtime-async-std", "postgres", "chrono", "uuid"] }
tokio = "1.37.0"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
validator = { version = "0.18.1", features = ["derive"] }

[[bin]]
name = "rust-route-manager"
path = "src/main.rs"
