[package]
name = "rusty_roads"
version = "0.1.3"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.5.1"
async-trait = "0.1.80"
bigdecimal = { version = "0.3", features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
sqlx = { version = "0.7.4", features = ["tls-native-tls", "runtime-async-std", "postgres", "chrono", "uuid", "bigdecimal"] }
tokio = "1.37.0"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
validator = { version = "0.18.1", features = ["derive"] }
log = "0.4.21"
regex = "1.10.4"

[[bin]]
name = "rusty_roads"
path = "src/main.rs"
